2000-11-22  OKUJI Yoshinori  <okuji@gnu.org>

	From Vesa Jaaskelainen <jaaskela@tietomyrsky.fi>:
	* stage2/builtins.c (testvbe_func): Don't set the bit 14 of a
	VBE mode number explicitly when calling get_vbe_mode_info.
	(vbeprobe_func): Likewise.
	
2000-11-22  OKUJI Yoshinori  <okuji@gnu.org>

	The code for the "INT 13H tracking technique" is somewhat
	simplified.

	* stage2/asm.S [!STAGE1_5] (track_int13): Don't replace an int13
	handler with set_tf_int13_handler. Instead, track_int13 itself
	emulates an int13 interrupt.
	[!STAGE1_5] (set_tf_int13_handler): Removed.
	[!STAGE1_5] (int1_handler): Use movzbw instead of xorb and movb.
	
2000-11-15  OKUJI Yoshinori  <okuji@gnu.org>

	* acconfig.h (PRESET_MENU_STRING): New entry.
	* acinclude.m4 (grub_DEFINE_FILE): New M4 macro.
	* configure.in (--enable-preset-menu): New option.
	* stage2/stage2.c [PRESET_MENU_STRING] (preset_menu): New
	variable.
	[PRESET_MENU_STRING] (preset_menu_offset): Likewise.
	[PRESET_MENU_STRING] (open_preset_menu): New function.
	[PRESET_MENU_STRING] (read_from_preset_menu): Likewise.
	[PRESET_MENU_STRING] (close_preset_menu): Likewise.
	[!PRESET_MENU_STRING] (open_preset_menu): New macro.
	[!PRESET_MENU_STRING] (read_from_preset_menu): Likewise.
	[!PRESET_MENU_STRING] (close_preset_menu): Likewise.
	(get_line_from_config): Accept a new argument READ_FROM_FILE.
	If it is false, read data from the preset menu instead.
	(cmain): If grub_open fails in opening the configuration file,
	then try to open the preset menu.
	
2000-11-11  OKUJI Yoshinori  <okuji@gnu.org>

	From Jan Fricke <fricke@uni-greifswald.de>:
	* stage2/asm.S [!STAGE1_5] (set_vbe_mode): Add a missing `$'
	prefix.
	
2000-11-11  OKUJI Yoshinori  <okuji@gnu.org>

	* stage2/bios.c (get_diskinfo): If BIOS supports LBA but doesn't
	return the correct total number of sectors, compute this by
	C/H/S returned by get_diskinfo_int13_extensions instead of
	get_diskinfo_standard.
	
2000-11-09  OKUJI Yoshinori  <okuji@gnu.org>
